@@ -1,3 +1,8 @@
+2008-08-16  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	* GenPod.pm: Document how to hide arguments with "=for arg".  Cope
+	with _noinc_ornull type variants.
+
 2008-08-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* GObject.xs (g_object_new): Check that we got a correct number of
